--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -3,73 +3,119 @@
 #Nation国家
 Nation.Player1 = 玩家1
 Nation.Player2 = 玩家2
+
 Nation.Player3 = 玩家3
 Nation.Player4 = 玩家4
 Nation.Player5 = 玩家5
 Nation.Player6 = 玩家6
 
 
-#Building建筑
-Building.CommandCenter.1 = 指挥中心1
-Building.CommandCenter.2 = 指挥中心2
+
+
+#RustedWar.Building建筑-铁锈
+RustedWar.Building.CommandCenter.1 = 指挥中心1
+RustedWar.Building.CommandCenter.2 = 指挥中心2
+
+RustedWar.Building.ArmyfactoryT1 = 陆军工厂T1
+RustedWar.Building.ArmyfactoryT2 = 陆军工厂T2
+RustedWar.Building.ResourceExtractorT1 = 资源抽取仪T1
+RustedWar.Building.ResourceExtractorT2 = 资源抽取仪T2
+RustedWar.Building.ResourceExtractorT3 = 资源抽取仪T3
+RustedWar.Building.ResourceExtractorT4 = 资源抽取仪T4
+RustedWar.Building.ResourceExtractorT5 = 资源抽取仪T5
+RustedWar.Building.ResourceInstrumentT1 = 资源制造仪T1
+RustedWar.Building.ResourceInstrumentT2 = 资源制造仪T2
+RustedWar.Building.ResourceInstrumentT3 = 资源制造仪T3
+RustedWar.Building.Rehabilitatedbay = 修复湾
+RustedWar.Building.WatchtowerT1 = 瞭望塔T1
+RustedWar.Building.WatchtowerT2 = 瞭望塔T2
+RustedWar.Building.MachinegunEmplacementT1 = 机枪炮台T1
+RustedWar.Building.MachinegunEmplacementT2 = 机枪炮台T2
+RustedWar.Building.MachinegunEmplacementT3 = 机枪炮台T3
+RustedWar.Building.GunEmplacementT1 = 火炮炮台T1
+RustedWar.Building.GunEmplacementT2 = 火炮炮台T2
+RustedWar.Building.NavalBaseT1 = 海军基地T1
+RustedWar.Building.NavalBaseT2 = 海军基地T2
+
+#RustedWar.Unit单位-铁锈
+RustedWar.Unit.Builder.1 = 建造者1
+RustedWar.Unit.Builder.2 = 建造者2
+RustedWar.Unit.Builder.3 = 建造者3
+RustedWar.Unit.Builder.4 = 建造者4
+RustedWar.Unit.Builder.5 = 建造者5
+RustedWar.Unit.Builder.6 = 建造者6
+
+RustedWar.Unit.CombatEngineer = 战斗工程师
+RustedWar.Unit.Tout = 侦查者
+RustedWar.Unit.Tank = 坦克
+RustedWar.Unit.FloatingTank = 悬浮坦克
+RustedWar.Unit.SelfpropelledGun = 自行火炮
+RustedWar.Unit.HeavyTank = 重型坦克
+RustedWar.Unit.PlasmaTank = 等离子坦克
+RustedWar.Unit.HeavyAircushionTank = 重型气垫坦克
+RustedWar.Unit.HeavyGun = 重型火炮
+RustedWar.Unit.MammothTank = 猛犸坦克
+RustedWar.Unit.SeaBuilder = 海上建造者
+RustedWar.Unit.MachineGunBoat = 机枪艇
+RustedWar.Unit.GuidedMissileShip = 导弹舰
+RustedWar.Unit.Battleship = 战列舰
+RustedWar.Unit.Submarine = 潜水艇
+
+
+#StarCraft.Building建筑-星际争霸
+StarCraft.Building.CommandCenter = 指挥中心
+StarCraft.Building.SupplyDepot = 补给站
+StarCraft.Building.Barracks = 兵营
+StarCraft.Building.Factory = 重工厂
 
 
 
-Building.ArmyfactoryT1 = 陆军工厂T1
-Building.ArmyfactoryT2 = 陆军工厂T2
-Building.ResourceExtractorT1 = 资源抽取仪T1
-Building.ResourceExtractorT2 = 资源抽取仪T2
-Building.ResourceExtractorT3 = 资源抽取仪T3
-Building.ResourceExtractorT4 = 资源抽取仪T4
-Building.ResourceExtractorT5 = 资源抽取仪T5
-Building.ResourceInstrumentT1 = 资源制造仪T1
-Building.ResourceInstrumentT2 = 资源制造仪T2
-Building.ResourceInstrumentT3 = 资源制造仪T3
-Building.Rehabilitatedbay = 修复湾
-Building.WatchtowerT1 = 瞭望塔T1
-Building.WatchtowerT2 = 瞭望塔T2
-Building.MachinegunEmplacementT1 = 机枪炮台T1
-Building.MachinegunEmplacementT2 = 机枪炮台T2
-Building.MachinegunEmplacementT3 = 机枪炮台T3
-Building.GunEmplacementT1 = 火炮炮台T1
-Building.GunEmplacementT2 = 火炮炮台T2
-Building.NavalBaseT1 = 海军基地T1
-Building.NavalBaseT2 = 海军基地T2
 
 
 
-#Unit单位
-Unit.Bulider.1 = 建造者1
-Unit.Bulider.2 = 建造者2
-Unit.Bulider.3 = 建造者3
-Unit.Bulider.4 = 建造者4
-Unit.Bulider.5 = 建造者5
-Unit.Bulider.6 = 建造者6
+
+
+#StarCraft.Unit单位-星际争霸
+StarCraft.StarCraft1 = 星际争霸启动器1
+StarCraft.StarCraft2 = 星际争霸启动器2
 
 
 
-Unit.CombatEngineer = 战斗工程师
-Unit.Tout = 侦查者
-Unit.Tank = 坦克
-Unit.FloatingTank = 悬浮坦克
-Unit.SelfpropelledGun = 自行火炮
-Unit.HeavyTank = 重型坦克
-Unit.PlasmaTank = 等离子坦克
-Unit.HeavyAircushionTank = 重型气垫坦克
-Unit.HeavyGun = 重型火炮
-Unit.MammothTank = 猛犸坦克
-Unit.SeaBuilder = 海上建造者
-Unit.MachineGunBoat = 机枪艇
-Unit.GuidedMissileShip = 导弹舰
-Unit.Battleship = 战列舰
-Unit.Submarine = 潜水艇
+StarCraft.Unit.SCV = SCV
+StarCraft.Unit.Marine = 陆战队员
+StarCraft.Unit.Reaper = 收割者
+StarCraft.Unit.Marauder = 劫掠者
+StarCraft.Unit.Hellio = 恶火
+StarCraft.Unit.SiegeTank = 攻城坦克
+StarCraft.Unit.SiegeTank.Stay = 攻城坦克-变形
+StarCraft.Unit.Thor = 雷神
+StarCraft.Unit.Thor.Stay = 雷神-变形
 
 
+
+
+
+
+
+
+
+#Tag
+StarCraft.LightArmor = 轻甲
+StarCraft.HeavyArmor = 重甲
+StarCraft.Biology = 生物
+StarCraft.Machinery = 机械
+StarCraft.Building = 建筑
 
 
 #资源
 Money = 金钱
+Supply = 补给
+CrystallineOre = 晶体矿
+Mashgas = 高能瓦斯
 
+#晋升
+ComDifMod.RustedWar = 纵横捭阖-铁锈战争
+ComDifMod.StarCraft = 纵横捭阖-星际争霸
 
 
 #杂项
