--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -69,7 +69,8 @@ StarCraft.Building.Barracks = 兵营
 StarCraft.Building.Factory = 重工厂
 
 
-
+StarCraft.Building.Starport = 星港
+StarCraft.Building.Auto-Turret = 自动机炮
 
 
 
@@ -91,15 +92,33 @@ StarCraft.Unit.SiegeTank.Stay = 攻城坦克-变形
 StarCraft.Unit.Thor = 雷神
 StarCraft.Unit.Thor.Stay = 雷神-变形
 
+StarCraft.Unit.Battlecruiser = 战列巡航舰
+StarCraft.Unit.Banshee = 女妖
+
+StarCraft.Unit.Raven = 铁鸦
+StarCraft.Unit.Medivac = 医疗运输机
 
 
 
+StarCraft.Building.Creeptumor = 菌毯肿瘤
+StarCraft.Building.Hatchery = 孵化场
 
+
+StarCraft.Unit.Queen = 虫后
+StarCraft.Unit.Larva = 幼虫
+StarCraft.Unit.Drone = 工蜂
+StarCraft.Unit.Overlord = 王虫
+StarCraft.Unit.Zergling = 跳虫
 
 
 
 
 #Tag
+AirUnit = 空军
+
+
+
+
 StarCraft.LightArmor = 轻甲
 StarCraft.HeavyArmor = 重甲
 StarCraft.Biology = 生物
