--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -1,3 +1,18 @@
+RTS Era = RTS时代
+
+Interactive promotion = 交互晋升
+
+Civilization Era = 文明时代
+Civilization Era Complete = 完整的文明时代
+
+
+
+
+
+
+
+
+
 
 
 #Nation国家
@@ -13,8 +28,7 @@ Nation.Player6 = 玩家6
 
 
 #RustedWar.Building建筑-铁锈
-RustedWar.Building.CommandCenter.1 = 指挥中心1
-RustedWar.Building.CommandCenter.2 = 指挥中心2
+RustedWar.Building.CommandCenter = 指挥中心
 
 RustedWar.Building.ArmyfactoryT1 = 陆军工厂T1
 RustedWar.Building.ArmyfactoryT2 = 陆军工厂T2
@@ -38,12 +52,7 @@ RustedWar.Building.NavalBaseT1 = 海军基地T1
 RustedWar.Building.NavalBaseT2 = 海军基地T2
 
 #RustedWar.Unit单位-铁锈
-RustedWar.Unit.Builder.1 = 建造者1
-RustedWar.Unit.Builder.2 = 建造者2
-RustedWar.Unit.Builder.3 = 建造者3
-RustedWar.Unit.Builder.4 = 建造者4
-RustedWar.Unit.Builder.5 = 建造者5
-RustedWar.Unit.Builder.6 = 建造者6
+RustedWar.Unit.Builder = 建造者
 
 RustedWar.Unit.CombatEngineer = 战斗工程师
 RustedWar.Unit.Tout = 侦查者
@@ -77,8 +86,7 @@ StarCraft.Building.Auto-Turret = 自动机炮
 
 
 #StarCraft.Unit单位-星际争霸
-StarCraft.StarCraft1 = 星际争霸启动器1
-StarCraft.StarCraft2 = 星际争霸启动器2
+StarCraft.StarCraft = 星际争霸启动器
 
 
 
@@ -112,12 +120,117 @@ StarCraft.Unit.Zergling = 跳虫
 
 
 
+#LOL.英雄联盟
+LOL.HeroSelection = 英雄选择
+
+
+Master Yi = 易大师
+
+Alpha raid = 阿尔法突袭
+Meditation = 冥想
+Infinite Kendo = 无极剑道
+Highland lineage = 高原血统
+
+
+Teemo = 提莫
+
+Blinding and blowing arrows = 致盲吹箭
+Little Mo runs = 小莫快跑
+Toxic shot = 毒性射击
+Grow mushrooms = 种蘑菇
+
+
+#文明时代
+Get China Features = 获得中华特色
+
+
+
+
+
+
+
+
+
+
+Gold point = 金钱
+Food point = 食物
+Wood point = 木材
+Stone point = 石材
+Tech point = 科技
+Army size = 剩余人口数量
+Army = 军队
+Build = 建筑
+Training Army = 训练军队
+Civilian Unit = 平民单位
+
+To train court officials in Town Center = 能够在城镇中心中训练朝廷命官
+Increase the non-gold output of adjacent workers by + 5 = 将相邻工人的非金币产出+5
+
+
+CE.CivSelection = 文明选择
+
+Town Center = 城镇中心
+Watchtower = 哨塔
+Palisade Wall = 木墙
+Stone Wall = 石墙
+Castle = 城堡
+Castle Embrasure = 城堡射击口
+Archery Range = 靶场
+Stable = 训马场
+Blacksmith = 铁匠铺
+Workshop = 工匠坊
+Market = 贸易站
+University = 学院
+House = 住宅
+
+
+
+Frame Town Center = 城镇中心框架
+Frame Watchtower = 哨塔框架
+Frame Palisade Wall = 木墙框架
+Frame Stone Wall = 石墙框架
+Frame Castle = 城堡框架
+Frame Castle Embrasure = 城堡射击口框架
+Frame Archery Range = 靶场框架
+Frame Stable = 训马场框架
+Frame Blacksmith = 铁匠铺框架
+Frame Workshop = 工匠坊框架
+Frame Market = 贸易站框架
+Frame University = 学院框架
+Frame House = 住宅框架
+
+
+
+Training Worker = 训练工人
+Training Scout = 训练斥候
+Training Archer = 训练弓箭手
+Training Composite Bowman = 训练复合弓兵
+Training Crossbowman = 训练弩手
+Training Warrior = 训练勇士
+Training Swordsman = 训练剑士
+Training Longswordsman = 训练长剑士
+Training Spearman = 训练枪兵
+Training Pikeman = 训练长枪兵
+Training Horseman = 训练骑手
+Training Chariot Archer = 训练战车射手
+Training Knight = 训练骑士
+Training Lancer = 训练枪骑兵
+Training Catapult = 训练投石车
+Training Trebuchet = 训练抛石机
+
+
+
+
+#各文明特色
+
+Training Official of the court = 训练朝廷命官
+Official of the court = 朝廷命官
+
+
+
+
 
 #Tag
-AirUnit = 空军
-
-
-
 
 StarCraft.LightArmor = 轻甲
 StarCraft.HeavyArmor = 重甲
@@ -131,14 +244,28 @@ Money = 金钱
 Supply = 补给
 CrystallineOre = 晶体矿
 Mashgas = 高能瓦斯
+The power of a hero = 英雄之力
+MP = 法力
+SP = 英雄技能
+KD = 英雄击杀数
+
 
 #晋升
-ComDifMod.RustedWar = 纵横捭阖-铁锈战争
-ComDifMod.StarCraft = 纵横捭阖-星际争霸
+Blinding = 致盲
+Poisoning = 中毒
 
 
-#杂项
-Double speed = 二倍速
-ComDifMod.Land = 纵横捭阖-陆地单位
-ComDifMod.Water = 纵横捭阖-海洋单位
-ComDifMod.Air = 纵横捭阖-空中单位
+#改良设施
+Creep = 菌毯
+
+
+
+
+RWSC.Land = 铁锈星际-陆地单位
+RWSC.Water = 铁锈星际-海洋单位
+RWSC.Air = 铁锈星际-空中单位
+
+LOL.Unit = 英雄联盟单位
+
+
+
