--- a/jsons/translations/Simplified_Chinese.properties
+++ b/jsons/translations/Simplified_Chinese.properties
@@ -4,10 +4,18 @@ Interactive promotion = 交互晋升
 
 Civilization Era = 文明时代
 Civilization Era Complete = 完整的文明时代
+StarCraft = 星际争霸
+StarCraft Complete = 完整的星际争霸
 
-
-
-
+SupplyDepot = 补给站
+Barracks = 兵营
+Factory = 重工厂
+EngineeringBay = 工程站
+SensorTower = 感应塔
+PlanetaryFortress = 行星要塞
+Refinery = 精炼厂
+GhostAcademy = 幽灵军校
+Starport = 星港
 
 
 
@@ -77,8 +85,13 @@ StarCraft.Building.SupplyDepot = 补给站
 StarCraft.Building.Barracks = 兵营
 StarCraft.Building.Factory = 重工厂
 
-
+StarCraft.Building.EngineeringBay = 工程厂
+StarCraft.Building.SensorTower = 感应塔
+StarCraft.Building.PlanetaryFortress = 行星要塞
+StarCraft.Building.Refinery = 精炼厂
+StarCraft.Building.GhostAcademy = 幽灵军校
 StarCraft.Building.Starport = 星港
+
 StarCraft.Building.Auto-Turret = 自动机炮
 
 
@@ -253,8 +266,8 @@ KD = 英雄击杀数
 #晋升
 Blinding = 致盲
 Poisoning = 中毒
-
-
+Collection CrystallineOre = 采集晶体矿
+Collection Mashgas = 采集高能瓦斯
 #改良设施
 Creep = 菌毯
 
